--- a/src/modules/better-journal/modules/journal-styles/styles/date-hiding.css
+++ b/src/modules/better-journal/modules/journal-styles/styles/date-hiding.css
@@ -30,6 +30,7 @@
 .journal .content .entry.iceberg_drill .journalbody .journalenvdate,
 .journal .content .entry.short.desertstreak .journalbody .journalenvdate,
 .journal .content .entry.schoolOfSorcery-wandUsed .journalbody .journalenvdate,
+.journal .content .entry.short.gift_wrapped_charm_trigger .journalbody .journalenvdate,
 .journal .content .entry.short.rift-whisker-woods-increase .journalbody .journalenvdate {
   display: none;
 }
